[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/scenes/win_scene/win_scene.gd" type="Script" id=1]
[ext_resource path="res://fonts/pixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://images/game/cat/scale/cat_body.png" type="Texture" id=3]
[ext_resource path="res://images/game/cat/scale/cat_hand.png" type="Texture" id=4]
[ext_resource path="res://images/game/cat/scale/cat_foot.png" type="Texture" id=5]
[ext_resource path="res://images/game/bear/scale/bear_body.png" type="Texture" id=6]
[ext_resource path="res://images/game/bear/scale/bear_hand.png" type="Texture" id=7]
[ext_resource path="res://images/game/bear/scale/bear_foot.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("center/press_text:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 0.95, 0.95 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("center/press_text:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 287, 39 ), Vector2( 273, 37 ), Vector2( 301, 41 ), Vector2( 287, 39 ) ]
}

[node name="win_scene" type="Node2D"]
script = ExtResource( 1 )

[node name="center_win" type="CenterContainer" parent="."]
anchor_right = 1.0
margin_right = 1921.0
margin_bottom = 208.0

[node name="win_label" type="Label" parent="center_win"]
margin_left = 711.0
margin_top = 33.0
margin_right = 1209.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 1 )
text = "You win"

[node name="first_player" type="Node2D" parent="."]
position = Vector2( 477.204, 532.89 )
scale = Vector2( 0.5, 0.5 )

[node name="body" type="Sprite" parent="first_player"]
texture = ExtResource( 3 )

[node name="hand" type="Sprite" parent="first_player"]
position = Vector2( -26.7097, 313.569 )
texture = ExtResource( 4 )

[node name="left_foot" type="Sprite" parent="first_player"]
position = Vector2( -179.311, 514.708 )
texture = ExtResource( 5 )

[node name="right_foot" type="Sprite" parent="first_player"]
position = Vector2( 164.845, 516.804 )
texture = ExtResource( 5 )

[node name="center_death" type="CenterContainer" parent="first_player"]
margin_left = -436.0
margin_top = -573.0
margin_right = 411.0
margin_bottom = -422.0

[node name="count" type="Label" parent="first_player/center_death"]
margin_left = 267.0
margin_top = 28.0
margin_right = 580.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 2 )
text = " deaths"

[node name="second_player" type="Node2D" parent="."]
position = Vector2( 1482.87, 528.901 )
scale = Vector2( 0.5, 0.5 )

[node name="center_death" type="CenterContainer" parent="second_player"]
margin_left = -460.881
margin_top = -566.646
margin_right = 386.119
margin_bottom = -415.646

[node name="count" type="Label" parent="second_player/center_death"]
margin_left = 267.0
margin_top = 28.0
margin_right = 580.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 2 )
text = " deaths"

[node name="body" type="Sprite" parent="second_player"]
position = Vector2( -3.70117, 55.5182 )
texture = ExtResource( 6 )
flip_h = true

[node name="hand" type="Sprite" parent="second_player"]
position = Vector2( 43.6133, 306.166 )
texture = ExtResource( 7 )

[node name="left_foot" type="Sprite" parent="second_player"]
position = Vector2( -179.311, 514.708 )
texture = ExtResource( 8 )
flip_h = true

[node name="right_foot" type="Sprite" parent="second_player"]
position = Vector2( 164.845, 516.804 )
texture = ExtResource( 8 )
flip_h = true

[node name="center" type="CenterContainer" parent="."]
editor/display_folded = true
margin_top = 908.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="press_text" type="Label" parent="center"]
margin_left = 287.0
margin_top = 39.0
margin_right = 1632.0
margin_bottom = 133.0
custom_fonts/font = SubResource( 3 )
text = "Press any button to go to menu"

[node name="text_animation" type="AnimationPlayer" parent="."]
anims/anim_text = SubResource( 4 )
[connection signal="animation_finished" from="text_animation" to="." method="_on_text_animation_animation_finished"]
